--- a/_pages/popups.html
+++ b/_pages/popups.html
@@ -25,36 +25,36 @@ description: Morgan Diann brings her bold, minimalist tattoo style to you with e
     <section>
         <h2>FAQ: Pop-Up Tattoos</h2>
         <dl>
-            <dt>How do I find out about upcoming pop-up events?</dt>
-            <dd>Morgan announces all pop-up tattoo events on her Instagram. Be sure to follow her there for updates on dates, locations, and available designs.</dd>
+            <h5>How do I find out about upcoming pop-up events?</h5>
+            <p>Morgan announces all pop-up tattoo events on her Instagram. Be sure to follow her there for updates on dates, locations, and available designs.</p>
 
-            <dt>Do I need to make an appointment?</dt>
-            <dd>No appointments—pop-ups are walk-in only! These events fill up quickly, so arriving early is the best way to secure a spot.</dd>
+            <h5>Do I need to make an appointment?</h5>
+            <p>No appointments—pop-ups are walk-in only! These events fill up quickly, so arriving early is the best way to secure a spot.</p>
 
-            <dt>What kind of tattoos are available at pop-ups?</dt>
-            <dd>Each pop-up event features a unique selection of flash designs created specifically for that day. If you can’t make it, don’t worry—these designs are added to Morgan’s flash sheet, so you can always book them later.</dd>
+            <h5>What kind of tattoos are available at pop-ups?</h5>
+            <p>Each pop-up event features a unique selection of flash designs created specifically for that day. If you can’t make it, don’t worry—these designs are added to Morgan’s flash sheet, so you can always book them later.</p>
 
-            <dt>How much do pop-up tattoos cost?</dt>
-            <dd>Pricing varies depending on the design. All prices are available at the event, so you can decide on the spot.</dd>
+            <h5>How much do pop-up tattoos cost?</h5>
+            <p>Pricing varies depending on the design. All prices are available at the event, so you can decide on the spot.</p>
 
-            <dt>What payment methods are accepted?</dt>
-            <dd>Morgan accepts cash and Venmo for pop-up tattoos.</dd>
+            <h5>What payment methods are accepted?</h5>
+            <p>Morgan accepts cash and Venmo for pop-up tattoos.</p>
 
-            <dt>Is there an age requirement?</dt>
-            <dd>Yes. Tennessee state law requires that all tattoo clients be at least 18 years old, with no exceptions. A valid ID is required.</dd>
+            <h5>Is there an age requirement?</h5>
+            <p>Yes. Tennessee state law requires that all tattoo clients be at least 18 years old, with no exceptions. A valid ID is required.</p>
 
-            <dt>How should I prepare for my tattoo?</dt>
-            <dd>To have the best experience, make sure to:
+            <h5>How should I prepare for my tattoo?</h5>
+            <p>To have the best experience, make sure to:
                 <ul>
                     <li>✔ Bring a valid ID</li>
                     <li>✔ Get a good night’s sleep</li>
                     <li>✔ Eat a meal beforehand</li>
                     <li>✔ Avoid alcohol before your appointment</li>
                 </ul>
-            </dd>
+            </p>
 
-            <dt>Is Morgan licensed to tattoo in Tennessee?</dt>
-            <dd>Yes! Morgan holds the proper licensing required by the state of Tennessee and follows all health and safety regulations. The health department inspects her setup before any tattooing begins, ensuring that all procedures meet the state’s stringent guidelines. You can rest assured that safety and hygiene are her top priorities.</dd>
+            <h5>Is Morgan licensed to tattoo in Tennessee?</h5>
+            <p>Yes! Morgan holds the proper licensing required by the state of Tennessee and follows all health and safety regulations. The health department inspects her setup before any tattooing begins, ensuring that all procedures meet the state’s stringent guidelines. You can rest assured that safety and hygiene are her top priorities.</p>
         </dl>
     </section>
 
