--- a/_pages/popups.html
+++ b/_pages/popups.html
@@ -26,10 +26,10 @@ description: Morgan Diann brings her bold, minimalist tattoo style to you with e
         <h2>FAQ: Pop-Up Tattoos</h2>
         <dl>
             <h5>How do I find out about upcoming pop-up events?</h5>
-            <p>Morgan announces all pop-up tattoo events on her Instagram. Be sure to follow her there for updates on dates, locations, and available designs.</p>
+            <p>Morgan announces all pop-up tattoo events on her Instagram. Be sure to follow her there for updates on dates, locations, and available designs: <a href="https://www.instagram.com/morgandianntattoo" target="_blank">@morgandianntattoo</a>.</p>
 
             <h5>Do I need to make an appointment?</h5>
-            <p>No appointments—pop-ups are walk-in only! These events fill up quickly, so arriving early is the best way to secure a spot.</p>
+            <p>Pop-ups are walk-in only! These events fill up quickly, so arriving early is the best way to secure a spot.</p>
 
             <h5>What kind of tattoos are available at pop-ups?</h5>
             <p>Each pop-up event features a unique selection of flash designs created specifically for that day. If you can’t make it, don’t worry—these designs are added to Morgan’s flash sheet, so you can always book them later.</p>
@@ -49,7 +49,7 @@ description: Morgan Diann brings her bold, minimalist tattoo style to you with e
                     <li>✔ Bring a valid ID</li>
                     <li>✔ Get a good night’s sleep</li>
                     <li>✔ Eat a meal beforehand</li>
-                    <li>✔ Avoid alcohol before your appointment</li>
+                    <li>✔ Avoid alcohol and caffeine before your appointment</li>
                 </ul>
             </p>
 
