--- a/_pages/popups.html
+++ b/_pages/popups.html
@@ -54,7 +54,7 @@ description: Morgan Diann brings her bold, minimalist tattoo style to you with e
             </p>
 
             <h5>Is Morgan licensed to tattoo in Tennessee?</h5>
-            <p>Yes! Morgan holds the proper licensing required by the state of Tennessee and follows all health and safety regulations. The health department inspects her setup before any tattooing begins, ensuring that all procedures meet the state’s stringent guidelines. You can rest assured that safety and hygiene are her top priorities.</p>
+            <p>Yes! Morgan holds the proper licensing required by the state of Tennessee and follows all health and safety regulations. All of Morgan's pop-ups are licensed in accordance with <a href=""target="_blank">Tenn. Code § 62-38-205</a>. The health department inspects her setup before any tattooing begins, ensuring that all procedures meet the state’s stringent guidelines. You can rest assured that safety and hygiene are her top priorities.</p>
         </dl>
     </section>
 
